--- a/src/planeks/templates/planeks/register.html
+++ b/src/planeks/templates/planeks/register.html
@@ -1,13 +1,20 @@
-{% extends "base.html" %}
-
-{% block title %}Create an account{% endblock %}
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <style>
+        * {
+        font-family: 'Poppins', sans-serif;
+        box-sizing: border-box;
+        font-weight: 300;
+    }
+    </style>
+</head>
 
 {% block content %}
     <h1>Create an account</h1>
-    <p>Please, sign up using the following form:</p>
     <form action="." method="post">
         {{ user_form.as_p }}
         {% csrf_token %}
         <p><input type="submit" value="Create my account"></p>
     </form>
 {% endblock %}
+
